--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,15 +47,15 @@
     <string name="tietCompensacionSmartSolarHint">Compensación de excedentes</string>
     <string name="tietPotenciaInstalacionSmartSolarHint">Potencia de instalación</string>
 
-    <!-- Fragment Smart Solar Mi Instalacion-->
+    <!-- Fragment Smart Solar Mi Instalacion -->
     <string name="tvInfoTextMiInstalacionSmartSolarText">Aquí tienes los datos de tu instalación fotovoltaica en tiempo real.</string>
     <string name="tvAutoconsumoMiInstalacionSmartSolarText">"Autoconsumo: "</string>
     <string name="tvAutoConsumoValueMiInstalacionSmartSolarText">92%</string>
 
-    <!-- Fragment Smart Solar Energia-->
+    <!-- Fragment Smart Solar Energia -->
     <string name="tvInfoTextEnergiaSmartSolarText">Estamos trabajando en mejorar la App. Tu paneles solares siguen produciendo en breve podrás seguir viendo tu producción solar. Sentimos las molestias.</string>
 
-    <!-- Fragment -->
+    <!-- Activity Login -->
     <string name="etLoginUsuarioHint">Usuario</string>
     <string name="etLoginContraseñaHint">Contraseña</string>
     <string name="chLoginRecordarContraseñaText">Recordar contraseña</string>
@@ -64,4 +64,8 @@
     <string name="btLoginRegistrarteText">Registrarte</string>
     <string name="ivLoginIberdrolaContentDescription">Iberdrola</string>
     <string name="dvLoginTambienPuedeText">También puedes</string>
+
+    <!-- Activity Signup -->
+    <string name="etSignupReptirContraseñaHint">Repetir Contraseña</string>
+    <string name="btSignupRegistrarseText">Registrarse</string>
 </resources>
