02/06/2023 - Create Account devuelve SignupResult en vez de boolean

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,6 +76,8 @@
     <string name="errortietSignupContraseA">Contraseña debe tener 6 caracteres</string>
     <string name="errortietSignupRepetirContraseA">Contraseña no coincide</string>
     <string name="errortietSignupDuplicate">Usuario ya existe</string>
+    <string name="errortietSignupInvalidEmail">Email no valido</string>
+    <string name="errortietSignupFail">No se pudo crear la cuenta</string>
 
 
     <!-- Activity ForgotPassword -->
